# pptspine

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/ppt-core/: Cargo.toml
crates/ppt-core/src/: color.rs  error.rs  export.rs  geom.rs  lib.rs  model.rs  resolved.rs  style.rs  theme.rs
crates/ppt-ocr/: Cargo.toml
crates/ppt-ocr/src/: lib.rs
crates/ppt-ocr/tests/: bridge.rs
crates/ppt-parse/: Cargo.toml
crates/ppt-parse/src/: lib.rs  resolve.rs  zip_pkg.rs
crates/ppt-parse/src/xml/: mod.rs  notes.rs  presentation.rs  slide.rs  text_style.rs  theme.rs
crates/ppt-parse/tests/: parse.rs  resolve.rs
crates/ppt-render/: Cargo.toml
crates/ppt-render/src/: lib.rs  shapes.rs  text.rs  transform.rs
crates/py-bindings/: Cargo.toml
crates/py-bindings/src/: lib.rs
docs/: PRD-PDF-EXPORT.md
python/pptspine/: __init__.py  __init__.pyi  _core.pyi
python/pptspine/_models/: PROVENANCE.md
python/tests/: conftest.py  test_export.py  test_image_bytes.py  test_notes.py  test_ocr.py  test_parse.py  test_pdf_export.py  test_ssim_gate.py
python/tests/ssim_refs/: anchored_textbox_bottom__p0.ssimref  b2_textbox__p0.ssimref  bulleted_textbox__p0.ssimref  dashed_connector__p0.ssimref  e2e_inheritance_chain__p0.ssimref  flipped_triangle__p0.ssimref  grouped_textbox__p0.ssimref  line_spacing_200pct__p0.ssimref  master_background__p0.ssimref  minimal_4x3_text_table__p0.ssimref  nested_group__p0.ssimref  rotated_textbox_45deg__p0.ssimref  round_rect_adjust__p0.ssimref  src_rect_crop__p0.ssimref  unknown_presets_cloud_heart__p0.ssimref  vertical_text_degraded__p0.ssimref  widescreen_16x9_2slides__p0.ssimref  widescreen_16x9_2slides__p1.ssimref
scripts/: lo_oracle_ssim.py  ocr_smoke.py  set_version_from_tag.py  ssim_baseline.py
