[workspace]
resolver = "2"
members = [
    "crates/ppt-core",
    "crates/ppt-parse",
    "crates/ppt-ocr",
    "crates/ppt-render",
    "crates/py-bindings",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/VoldemortGin/pptspine"
authors = ["pptspine contributors"]
rust-version = "1.96"

[workspace.dependencies]
# --- shared first-party crates ---
ppt-core = { path = "crates/ppt-core", version = "0.0.1" }
ppt-parse = { path = "crates/ppt-parse", version = "0.0.1" }
ppt-ocr = { path = "crates/ppt-ocr", version = "0.0.1" }
ppt-render = { path = "crates/ppt-render", version = "0.0.1" }

# --- sibling family crate: domain-neutral OCR (single source of truth for the
# path; ppt-ocr uses `ocrspine.workspace = true` so no per-crate path math). ---
ocrspine = { git = "https://github.com/VoldemortGin/ocrspine", rev = "732975f0233cd6500edfbbb82bc06c2332369871" }

# --- sibling family crate: shared PDF typesetting engine (pdfspine Phase A;
# PRD-PDF-EXPORT §1 locked dependency form, same precedent as ocrspine above.
# ppt-render uses `pdf-typeset.workspace = true` so no per-crate path math). ---
pdf-typeset = { git = "https://github.com/VoldemortGin/pdfspine", rev = "93214453167535c424079470aefb13773e79d717" }
# 同仓姊妹 crate:内置 Liberation 字体字节(仅 ppt-render 的 dev-dep,B-11
# font_map 文件路径分支测试用真实 TTF;与 pdf-typeset 锁同一 rev)。
pdf-fonts = { git = "https://github.com/VoldemortGin/pdfspine", rev = "93214453167535c424079470aefb13773e79d717" }

# --- shared third-party deps (pinned to resolve on toolchain 1.96) ---
thiserror = "2"
pyo3 = "0.29"
# Read-only zip for .pptx (OOXML = zip + XML). Pure-Rust DEFLATE backend so the
# build stays self-contained / cross-platform; no system zlib.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Pull-based, low-allocation XML reader for the OOXML parts. Pure-Rust.
quick-xml = "0.36"

[profile.release]
opt-level = 3
lto = "thin"
