[build-system]
requires = ["maturin>=1.12,<2"]
build-backend = "maturin"

[project]
name = "pptspine"
# The version is taken from the Rust workspace (Cargo.toml [workspace.package])
# at build time via maturin's `dynamic` metadata — that crate version is the
# single source of truth.
dynamic = ["version"]
description = "Pure-Rust PowerPoint (.pptx / OOXML) structural parser with local image OCR, via PyO3."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "pptspine contributors" }]
keywords = ["pptx", "powerpoint", "ooxml", "office", "rust", "ocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Office Suites",
]

# The PP-OCRv5 ONNX model weights ship in the shared `ocrspine-models` data
# package (one published copy for the whole spine family), resolved at runtime via
# `ocrspine_models.models_dir()`. Hard (base) dependency so a plain
# `pip install pptspine` is full-OCR-capable offline — no extra, no download.
dependencies = ["ocrspine-models>=0.0.1,<0.1"]

[project.urls]
Homepage = "https://github.com/VoldemortGin/pptspine"
Repository = "https://github.com/VoldemortGin/pptspine"
Issues = "https://github.com/VoldemortGin/pptspine/issues"

[project.optional-dependencies]
test = ["pytest>=8"]
# OCR 已**全功能内建**。只有一个发布的 `pptspine` wheel,它**编进**了纯 Rust 的
# PaddleOCR 引擎(`ppt-ocr` 是非可选的 workspace 成员,经 py-bindings 无条件链入);
# ~28 MB 的 PP-OCRv5 ONNX 权重来自共享数据包 `ocrspine-models`(见上方 base
# `dependencies`)。所以裸 `pip install pptspine` 即全功能 OCR、离线可跑、无需额外
# extra。此 `[ocr]` extra 故为空,仅保留名字以向后兼容。
#
# 运行期模型解析顺序(见 `python/pptspine/__init__.py` 的 `_ensure_ocr_models_env`,
# 它把目录同时导出为 `PPTSPINE_OCR_MODELS` 与引擎读取的 `OCRSPINE_MODELS`):
#   1. `PPTSPINE_OCR_MODELS` 已设置(用户显式覆盖);
#   2. 否则已安装的共享数据包 `ocrspine_models`(已装 wheel 的默认);
#   3. 否则引擎回退到编译期烘进的 `ocrspine/models` 开发目录(源码 checkout);
#   4. 否则抛出清晰的 `PptOcrError` / `PptUnsupportedError`。
ocr = []  # 模型来自 base `ocrspine-models` 依赖;此 extra 为向后兼容的 no-op。

[tool.maturin]
# The Rust crate that builds the extension module.
manifest-path = "crates/py-bindings/Cargo.toml"
# Place the compiled `_core` inside the `pptspine` package.
module-name = "pptspine._core"
# Pure-Python sources live here.
python-source = "python"
# abi3 wheel covering CPython >= 3.11.
#
# OCR 是**非可选**的:`ppt-ocr` 是 workspace 成员,py-bindings 无条件依赖它(它再依赖
# 姊妹 crate `ocrspine` 的纯 Rust PaddleOCR 引擎)。因此 `cargo build` / `maturin
# build` 都把 OCR 代码编进扩展,不需要任何额外 feature 开关。~28 MB 的 PP-OCRv5 ONNX
# 权重不嵌进二进制、也不打进本 wheel,而是来自共享数据包 `ocrspine-models`(见上方
# base `dependencies`),运行期从磁盘加载(见上方 `[ocr]` extra 里的模型解析顺序)。
# 净效果:裸 `pip install pptspine` 同时拉来 OCR 代码(本 wheel)与模型(数据包)。
features = ["pyo3/abi3-py311"]
# Ship PEP 561 type information (.pyi stubs + py.typed markers) in sdist + wheel.
# 根 LICENSE / NOTICE 也显式纳入:元数据声明 License-File,PyPI 要求它实际存在于分发
# 包内,否则 sdist 上传报 400(maturin 默认不把根 LICENSE/NOTICE 打进 sdist)。
include = [
    "LICENSE",
    "NOTICE",
    "python/pptspine/py.typed",
    "python/pptspine/*.pyi",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
