[package]
name = "ppt-parse"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "pptspine OOXML reader: zip extract + quick-xml walk -> ppt_core::Presentation."

[dependencies]
ppt-core = { workspace = true }
thiserror.workspace = true
zip.workspace = true
quick-xml.workspace = true
