[package]
name = "py-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PyO3 bindings for pptspine; builds the _core extension module. FFI chokepoint."
publish = false

[lib]
name = "_core"
# cdylib for the Python extension module; rlib so it can be unit-tested.
crate-type = ["cdylib", "rlib"]

[features]
# OCR 代码无条件编入(`ppt-ocr` 是非可选依赖)。此 `ocr` feature 为 no-op,仅保留名字
# 以兼容 `maturin develop --features ocr` 这类显式调用,不改变默认编译行为。
ocr = []

[dependencies]
ppt-core = { workspace = true }
ppt-parse = { workspace = true }
ppt-ocr = { workspace = true }
pyo3 = { workspace = true, features = ["abi3-py311", "extension-module"] }
